# general-mcp-tool

./: .gitignore  BEFORE_AFTER.md  IMPLEMENTATION_COMPLETE.md  README.md  package-lock.json  pyproject.toml  test_measure_queries.py
.github/workflows/: python-app.yml
docs/: INTEGRATION_CHECKLIST.md
docs/agents/: agents.md
docs/architecture/: context.md  executable-foundation.md  implementation-status.md  phase-3-power-bi-specialist.md
docs/business_rules/: sales-rules.md
docs/context/business_rules/: sales-rules.md
docs/context/examples/: sales-query-examples.md
docs/context/playbooks/: postgresql-analytics-playbook.md
docs/context/schemas/: sales-schema.md
docs/context/technical_docs/: postgresql-mcp.md
docs/examples/: sales-query-examples.md
docs/implementation-notes/: power-bi-measure-value-queries.md
docs/playbooks/: semantic-model-playbook.md
docs/roadmap/: 00-overview.md
docs/schemas/: sales-schema.md
docs/standards/: rules.md
mcps/postgressql-mcp-master/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  server.py
mcps/postgressql-mcp-master/app/prompts/: __init__.py  queries.py
mcps/postgressql-mcp-master/app/resources/: __init__.py  examples.py  guidelines.py  schema.py
mcps/postgressql-mcp-master/app/semantic_tools/: __init__.py  high_level.py
mcps/postgressql-mcp-master/app/services/: __init__.py  discovery.py  rag.py  semantic_mapper.py
mcps/postgressql-mcp-master/core/: connection.py  errors.py  formatters.py  query_validation.py  tool_results.py
mcps/postgressql-mcp-master/tests/: test_connection.py  test_formatters.py  test_query_validation.py  test_tools.py
mcps/postgressql-mcp-master/tools/: query.py  schema.py
mcps/powerbi-modeling-mcp/: package-lock.json  package.json
src/mcp_orchestrator/: __init__.py  config.py  main.py  mcp_proxy.py
src/mcp_orchestrator/api/: __init__.py  routes.py
src/mcp_orchestrator/application/: __init__.py  chat.py  composer.py  dax_executor.py  intake.py  orchestrator.py  policy.py  power_bi_measures.py  (+1 more)
src/powerbi_mcp_manager/: cli.py  manager.py
tests/: test_audit_and_confirmations.py  test_chat_api.py  test_context_retriever.py  test_contracts.py  test_execution_policy.py  test_intake.py  test_mcp_proxy.py  test_mcp_server_catalog.py  test_mcp_stdio_bridge.py  test_openai_intake.py  test_orchestrate_api.py  test_postgresql_mcp_client.py  test_powerbi_mcp_client.py  test_rag_retriever.py  test_router.py  test_sql_server_mcp_client.py
(+35 files in other folders)
