[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "general-mcp-tool"
version = "0.1.0"
description = "Python modules for Power BI MCP management and MCP orchestration."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "mcp>=1.26",
  "pydantic>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
powerbi-mcp-manager = "powerbi_mcp_manager.cli:main"
mcp-orchestrator = "mcp_orchestrator.main:run"
mcp-orchestrator-proxy = "mcp_orchestrator.mcp_proxy:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-p",
  "no:cacheprovider",
]
